--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">Header Logo</div>
+            <div class="logo">PORTFOLIO</div>
             <div class="one">header link one</div>
             <div class="two">header link two</div>
             <div class="three">header link three</div>
@@ -28,10 +28,10 @@
     
     <div class="containertwo">
         <div class="boxes">
-            <div class="box1">Box 1</div>                 
-            <div class="box2">Box 2</div>
-            <div class="box3">Box 3</div>
-            <div class="box4">Box 4</div>
+            <div class="box1">Box 1 <p class="caption">this anime is Shingeki no Kyojin</p></div>           
+            <div class="box2">Box 2 <p class="caption">this anime is Shingeki no Kyojin</p></div>
+            <div class="box3">Box 3 <p class="caption">this anime is Shingeki no Kyojin</p></div>
+            <div class="box4">Box 4 <p class="caption">this anime is Shingeki no Kyojin</p></div>
         </div>
     </div>
 
